# Drift_lens

./: .gitignore  CONTRIBUTING.md  README.md  launch_posts.md  pyproject.toml
drift_lens/: __init__.py  alert.py  cli.py  constants.py  dashboard.py  logger.py  projector.py
drift_lens/detector/: __init__.py  frechet.py  mmd.py  topology.py
examples/: quickstart.py
tests/: conftest.py  test_detector.py  test_logger.py
